--- a/dashboard/css/styles.css
+++ b/dashboard/css/styles.css
@@ -5,6 +5,11 @@ html, body {
 .form-container, .table-container {
   height: 100%;
 }
+
 .header {
   font-style: Calibri;
+}
+
+.active-edit {
+  outline: 1px solid blue;
 }
