--- a/css/style.css
+++ b/css/style.css
@@ -103,3 +103,7 @@ body #fp-nav ul li a.active span, .fp-slidesNav ul li a.active span {
 body #fp-nav ul li a span, .fp-slidesNav ul li a span {
   border: 1px solid white;
 }
+
+.hidden {
+  display: none;
+}
